RESOLVED FIXED69059
DFG checkArgumentTypes fails to check boolean predictions
https://bugs.webkit.org/show_bug.cgi?id=69059
Summary DFG checkArgumentTypes fails to check boolean predictions
Filip Pizlo
Reported 2011-09-28 22:42:28 PDT
This is causing really bizarre failures: https://bugs.webkit.org/show_bug.cgi?id=69038
Attachments
the patch (2.60 KB, patch)
2011-09-28 23:17 PDT, Filip Pizlo
no flags
the patch, with test (6.83 KB, patch)
2011-09-28 23:58 PDT, Filip Pizlo
barraclough: review+
Oliver Hunt
Comment 1 2011-09-28 22:44:27 PDT
Craziness
Filip Pizlo
Comment 2 2011-09-28 23:17:23 PDT
Created attachment 109123 [details] the patch
Filip Pizlo
Comment 3 2011-09-28 23:36:07 PDT
All tests pass.
Gavin Barraclough
Comment 4 2011-09-28 23:39:39 PDT
The patch looks okay, but wouldn't it be possible to write a test for this? Say, call a function many times with a boolean, then throw an object at it? Probably should be r- for lack of layout test.
Filip Pizlo
Comment 5 2011-09-28 23:44:41 PDT
(In reply to comment #4) > The patch looks okay, but wouldn't it be possible to write a test for this? > Say, call a function many times with a boolean, then throw an object at it? > Probably should be r- for lack of layout test. This already has test coverage; it makes fast/dom/SelectorAPI/resig-SelectorsAPI-test.xhtml fail. But sure, it would be easy to write a test. I'll do it after getting some sleep.
Filip Pizlo
Comment 6 2011-09-28 23:58:46 PDT
Created attachment 109128 [details] the patch, with test
Gavin Barraclough
Comment 7 2011-09-29 00:03:59 PDT
Comment on attachment 109128 [details] the patch, with test Yay!
Filip Pizlo
Comment 8 2011-09-29 00:36:01 PDT
Landed in r96306.
Note You need to log in before you can comment on or make changes to this bug.