DFG checkArgumentTypes fails to check boolean predictions https://bugs.webkit.org/show_bug.cgi?id=69059

Reviewed by Gavin Barraclough.

Source/JavaScriptCore:

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::checkArgumentTypes):
* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::checkArgumentTypes):

LayoutTests:

* fast/js/boolean-argument-prediction-expected.txt: Added.
* fast/js/boolean-argument-prediction.html: Added.
* fast/js/script-tests/boolean-argument-prediction.js: Added.
(predictBooleanArgument):



Canonical link: https://commits.webkit.org/85073@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96306 268f45cc-cd09-0410-ab3c-d52691b4dbfc